--- a/src/Pages/Upcoming/upcoming.html
+++ b/src/Pages/Upcoming/upcoming.html
@@ -11,11 +11,54 @@
         <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
 
+    <div class="container">
+        <h1 class="title">UPCOMING EVENTS</h1>
+
+        <div>
+            <iframe class="ev"
+                src="../../Components/Event/event.html?tit=Inauguration: 20th Oct 2023&desp=The inauguration of the ACM (Association for Computing Machinery) 
+                club in our college was a momentous occasion, marked by enthusiasm and anticipation. 
+                Students and faculty gathered to witness the birth of this dynamic community dedicated to all things computing. 
+                The event featured inspiring speeches from distinguished guests, highlighting the importance of innovation and collaboration 
+                in the field of computer science. With the ACM club's inception, a new era of exploration and learning in the 
+                world of technology has begun at our college.&ev-img=/src/Pages/Upcoming/Assets/bg.jpg"
+                frameborder="0" width="100%" scrolling="no"></iframe>
+        </div>
+
+        <div class="spacer"></div>
+
+
+    </div>
+
 
 
     <footer>
         <iframe src="../../Components/Footer/footer.html" frameborder="0" width="100%" height="260px"></iframe>
     </footer>
+
+    <script>
+        function resizeAllIframes() {
+            var iframes = document.getElementsByClassName('ev');
+            for (var i = 0; i < iframes.length; i++) {
+                var iframe = iframes[i];
+                var contentHeight = iframe.contentWindow.document.body.scrollHeight;
+                iframe.style.height = contentHeight + 'px';
+            }
+        }
+
+        function onLoadHandler() {
+            resizeAllIframes();
+        }
+
+        window.addEventListener('load', onLoadHandler); // Change 'load' event here
+
+        var iframes = document.getElementsByClassName('ev');
+        for (var i = 0; i < iframes.length; i++) {
+            iframes[i].addEventListener('load', onLoadHandler); // Change 'onload' event here
+        }
+
+        window.addEventListener('resize', resizeAllIframes);
+    </script>
     
 </body>
 </html>
